feat: Add recipe Marry Me Bean Soup page with content

--- a/recipes/MarryMeBeanSoup.html
+++ b/recipes/MarryMeBeanSoup.html
@@ -7,5 +7,34 @@
 </head>
 <body>
     <h1>Marry Me Bean Soup</h1>
+    <img src="../images/MarryMeBeanSoup.webp" alt="Marry Me Bean Soup" height="400" width="450"></a>
+    <h3>Description</h3>
+    <p>This creamy marry me bean soup is packed with protein and is sure to keep you warm and full. The best part is you can have it on the table in less than 25 minutes. It’s easy to double the recipe, too.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 tablespoons butter</li>
+        <li>1/2 cup diced onion</li>
+        <li>2 cloves garlic, pressed</li>
+        <li>1/2 teaspoon crushed red pepper</li>
+        <li>1/2 teaspoon paprika</li>
+        <li>1 (15 ounce) can great northern beans</li>
+        <li>1/2 cup chicken broth</li>
+        <li>1/2 cup chopped sun-dried tomatoes</li>
+        <li>1/4 cup tomato sauce</li>
+        <li>1/2 cup heavy cream</li>
+        <li>1/2 cup Parmesan cheese</li>
+        <li>2 cups fresh spinach</li>
+        <li>2 tablespoons chopped fresh basil</li>
+        <li>salt and freshly ground black pepper to taste</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Melt butter in a Dutch oven. Add onions and cook until soft and translucent, 5 to 6 minutes.</li>
+        <li>Add garlic, red pepper, and paprika; cook and stir until garlic is fragrant, about 1 minute.</li>
+        <li>Add beans, and cook until simmering, about 5 minutes. Mash half of the beans.</li>
+        <li>Stir in chicken broth, sun-dried tomatoes, and tomato sauce. Add heavy cream and Parmesan cheese, and stir until well combined.</li>
+        <li>Add spinach and basil and cook until spinach is wilted. Season with salt and pepper.</li>
+    </ol>
 </body>
 </html>
