feat: Add more recipes
Add 2 more recipes to index.html
Add content and images for 2 more recipes to /recipes

--- a/recipes/MarryMeBeanSoup.html
+++ b/recipes/MarryMeBeanSoup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marry Me Bean Soup</title>
+    <title>Odin recipes | Marry Me Bean Soup</title>
 </head>
 <body>
     <h1>Marry Me Bean Soup</h1>
