--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
      <h1>Odin recipes</h1>
-     <a href="./recipes/MarryMeBeanSoup.html">Marry Me Bean Soup</a>
+     <ul>
+        <li><a href="./recipes/MarryMeBeanSoup.html">Marry Me Bean Soup</a></li>
+        <li><a href="./recipes/CauliflowerandBroccoliSaladwithHoney-SoyDressing.html">Cauliflower and Broccoli Salad with Honey-Soy Dressing</a></li>  
+     </ul>
 </body>
 </html>
