style: Add some basic CSS style to pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
      <h1>Odin recipes</h1>
      <ul>
         <li><a href="./recipes/MarryMeBeanSoup.html">Marry Me Bean Soup</a></li>
-        <li><a href="./recipes/CauliflowerandBroccoliSaladwithHoney-SoyDressing.html">Cauliflower and Broccoli Salad with Honey-Soy Dressing</a></li>  
+        <li><a href="./recipes/CauliflowerandBroccoliSaladwithHoney-SoyDressing.html">Cauliflower and Broccoli Salad with Honey-Soy Dressing</a></li>
+        <li><a href="./recipes/SpringRollBowl.html">Spring Roll Bowl</a></li>
      </ul>
 </body>
 </html>
