--- a/recipes/CauliflowerandBroccoliSaladwithHoney-SoyDressing.html
+++ b/recipes/CauliflowerandBroccoliSaladwithHoney-SoyDressing.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Cauliflower and Broccoli Salad with Honey-Soy Dressing</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Cauliflower and Broccoli Salad with Honey-Soy Dressing</h1>
-    <img src="../images/Cauliflower-and-Broccoli-Salad-with-Honey-Soy-Dressing.webp" alt="Cauliflower and Broccoli Salad with Honey-Soy Dressing" height="400" width="450"></a>
+    <img src="../images/Cauliflower-and-Broccoli-Salad-with-Honey-Soy-Dressing.webp" alt="Cauliflower and Broccoli Salad with Honey-Soy Dressing" height="400" width="530"></a>
     <h3>Description</h3>
     <p>This vibrant veggie dish brings together crisp red cabbage, crunchy cauliflower and broccoli, and a tangy orange-tamari dressing. The flavors deepen as the salad chills, making it easy to make ahead for holiday get-togethers.</p>
     <h3>Ingredients</h3>
