--- a/recipes/SpringRollBowl.html
+++ b/recipes/SpringRollBowl.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Spring Roll Bowl</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Spring Roll Bowl</h1>
-    <img src="../images/SpringRollBowl.webp" alt="Spring Roll Bowl" height="400" width="450"></a>
+    <img src="../images/SpringRollBowl.webp" alt="Spring Roll Bowl" height="400" width="490"></a>
     <h3>Description</h3>
     <p>This delicious spring roll bowl is full of crisp and crunchy vegetables, shrimp, and verimicelli noodles, topped with peanut sauce and served with Vietnamese Nuoc Cham sauce — the perfect light lunch.</p>
     <h3>Ingredients</h3>
