--- a/recipes/MarryMeBeanSoup.html
+++ b/recipes/MarryMeBeanSoup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin recipes | Marry Me Bean Soup</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Marry Me Bean Soup</h1>
